# ComfyUI-Video-Stabilizer

./: .gitignore  AGENTS.md  CHANGELOG.md  LICENSE  README.md  README_ja.md  __init__.py  pyproject.toml  requirements.txt
.claude/skills/article-or-announcement/: SKILL.md
.claude/skills/comfyui-node-change/: SKILL.md
.claude/skills/docs-sync/: SKILL.md
.github/workflows/: publish.yml
docs/: implementation-plan-motion-meta-v2.md  shake-generator-split-plan.md  shake-redesign-plan.md
docs/adr/: 2025-10-29-video-stabilizer-flow.md  2025-10-29-video-stabilizer-node.md  2025-11-03-video-stabilizer-classic.md  2025-11-03-video-stabilizer-flow.md  2025-11-05-crop-rework.md  2025-11-05-fps-aware-smoothing.md  2026-07-02-motion-meta-v2-and-shake-generator.md  2026-07-02-shake-generator-redesign.md  2026-07-02-shake-generator-split.md
docs/requirements/: 001-video-stabilizer.md  002-video-stabilizer-flow.md  003-motion-meta-and-apply.md  004-shake-generator.md
example_workflows/: Wan2.1_VACE_outpainting_VideoStabilizer.json  Wan2.2-VACE-Fun_outpainting_VideoStabilizer.json
nodes/: __init__.py  motion_apply.py  motion_meta.py  node_replacements.py  shake_noise.py  stabilizer_utils.py  video_stabilizer.py  video_stabilizer_classic.py  video_stabilizer_flow.py  video_stabilizer_inverse.py  video_stabilizer_motion_apply.py  video_stabilizer_shake_generator.py  video_stabilizer_shake_generator_manual.py
nodes/utils/: __init__.py  oneeuro.py
scripts/: check_crop_aspect_ratio.py  check_inverse_stabilization.py  check_motion_meta.py  check_node_schema.py  check_workflows.py  compare_refactor_behavior.py  validate_repo.py
(+5 files in other folders)
