[project]
name = "video-stabilizer"
description = "Two complementary stabiliser nodes for ComfyUI: Video Stabilizer (Classic), Video Stabilizer (Flow)"
version = "1.0.0"
license = {file = "LICENSE"} 
# classifiers = [
#     # For OS-independent nodes (works on all operating systems)
#     "Operating System :: OS Independent",
#
#     # OR for OS-specific nodes, specify the supported systems:
#     "Operating System :: Microsoft :: Windows",  # Windows specific
#     "Operating System :: POSIX :: Linux",  # Linux specific
#     "Operating System :: MacOS",  # macOS specific
#
#     # GPU Accelerator support. Pick the ones that are supported by your extension.
#     "Environment :: GPU :: NVIDIA CUDA",    # NVIDIA CUDA support
#     "Environment :: GPU :: AMD ROCm",       # AMD ROCm support
#     "Environment :: GPU :: Intel Arc",      # Intel Arc support
#     "Environment :: NPU :: Huawei Ascend",  # Huawei Ascend support
#     "Environment :: GPU :: Apple Metal",    # Apple Metal support
# ]

dependencies = ["numpy>=1.24", "opencv-contrib-python>=4.9,<4.13"]

[project.urls]
Repository = "https://github.com/nomadoor/ComfyUI-Video-Stabilizer"
#  Used by Comfy Registry https://registry.comfy.org
Documentation = "https://github.com/nomadoor/ComfyUI-Video-Stabilizer/wiki"
"Bug Tracker" = "https://github.com/nomadoor/ComfyUI-Video-Stabilizer/issues"

[tool.comfy]
PublisherId = ""
DisplayName = "ComfyUI-Video-Stabilizer"
Icon = ""
includes = [] 
# "requires-comfyui" = ">=1.0.0"  # ComfyUI version compatibility

